<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/gifs_content_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="fill"
            app:layout_constraintBottom_toTopOf="@+id/errorUI_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/loading_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="64dp"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/gifs_image_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:padding="4dp"
                android:contentDescription="@string/gif_image_description"/>

            <TextView
                android:id="@+id/gifs_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="bottom"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                tools:text="Image description" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/errorUI_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="18dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/nav_buttons_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gifs_content_container">

            <ImageView
                android:id="@+id/error_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_network_error_cloud"
                android:contentDescription="@string/error_image_description"/>

            <TextView
                android:id="@+id/error_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/network_error_text"
                android:textSize="24sp"
                tools:text="Network Error" />

            <Button
                android:id="@+id/try_again_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/try_again_button_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_buttons_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <ImageButton
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_previous_24"
                android:contentDescription="@string/previous_button_description"/>

            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_next_24"
                android:contentDescription="@string/next_button_description"/>

        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigation_bar"
            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>